crates/ptx_backend/tests/snapshots/llvm_to_ptx_extra__br_uncond.snap
---
source: crates/ptx_backend/tests/llvm_to_ptx_extra.rs
expression: "run_test(\"br_uncond.ll\")"
---
// Function: br_uncond
.version 7.0
.target sm_75
.address_size 64


.entry br_uncond {
    ret;
}
