crates/ptx_backend/tests/snapshots/llvm_to_ptx_extra__conflict_type.snap
---
source: crates/ptx_backend/tests/llvm_to_ptx_extra.rs
expression: "run_test(\"conflict_type.ll\")"
---
// Function: main
.version 7.0
.target sm_75
.address_size 64

.entry main {
.reg .f32 %val;
.reg .s32 %1, %out, %x, %y;

entry:
    .local .s32 x;
    st.global.s32 [%x], %1;
    ld.global.f32 %val, [x];
    // unhandled: BitCast(BitCast { operand: LocalOperand { name: Name("val"), ty: TypeRef(FPType(Single)) }, to_type: TypeRef(IntegerType { bits: 32 }), dest: Name("cast"), debugloc: None })
    ret;
}
