crates/ptx_backend/tests/snapshots/llvm_to_ptx_extra__ret_only.snap
---
source: crates/ptx_backend/tests/llvm_to_ptx_extra.rs
expression: "run_test(\"ret_only.ll\")"
---
// Function: ret_only
.version 7.0
.target sm_75
.address_size 64


.entry ret_only {
    ret;
}
